--- a/etc/options.html
+++ b/etc/options.html
@@ -126,16 +126,28 @@
 		<section id="left-pane">
 			<ul>
 				<li>
-					<div class="section-name">Section 1</div>
-					<div class="section-desc">Section 1 Description</div>
+					<div class="section-name">Page options</div>
+					<div class="section-desc">Change options for different pages like backgrounds and colors.</div>
 				</li>
 				<li>
-					<div class="section-name">Section 2</div>
-					<div class="section-desc">Section 2 Description</div>
+					<div class="section-name">Features</div>
+					<div class="section-desc">Enable and disable different Courses+ features</div>
 				</li>
 				<li>
-					<div class="section-name">Section 3</div>
-					<div class="section-desc">Section 3 Description</div>
+					<div class="section-name">Services</div>
+					<div class="section-desc">Connect Courses+ with other websites</div>
+				</li>
+				<li>
+					<div class="section-name">Storage</div>
+					<div class="section-desc">Manage Courses+'s stored data</div>
+				</li>
+				<li>
+					<div class="section-name">Privacy</div>
+					<div class="section-desc">Manage Courses+'s anonymous analytics</div>
+				</li>
+				<li>
+					<div class="section-name">About</div>
+					<div class="section-desc">About the version of Courses+ you have installed.</div>
 				</li>
 			</ul>
 		</section>
