Finished changing "Courses+" to "CoursesPlus"

--- a/etc/options.html
+++ b/etc/options.html
@@ -120,40 +120,40 @@
 		</style>
 
 		<header>
-			<h1 class="pull-left">Options <span>Courses+</span></h1> <div class="pull-right"><a href="https://courses.dalton.org">Go to Courses &raquo;</a></div>
+			<h1 class="pull-left">Options <span>Courses<strong>Plus</strong></span></h1> <div class="pull-right"><a href="https://courses.dalton.org">Go to Courses &raquo;</a></div>
 		</header>
 
 		<section id="left-pane">
 			<ul>
 				<li>
 					<div class="section-name">Page options</div>
-					<div class="section-desc">Change options for different pages like backgrounds and colors.</div>
+					<div class="section-desc">Change options for different pages. <em>Example: backgrounds and colors.</em></div>
 				</li>
 				<li>
 					<div class="section-name">Features</div>
-					<div class="section-desc">Enable and disable different Courses+ features</div>
+					<div class="section-desc">Enable and disable different Courses<strong>Plus</strong> features</div>
 				</li>
 				<li>
 					<div class="section-name">Services</div>
-					<div class="section-desc">Connect Courses+ with other websites</div>
+					<div class="section-desc">Connect Courses<strong>Plus</strong> with other websites</div>
 				</li>
 				<li>
 					<div class="section-name">Storage</div>
-					<div class="section-desc">Manage Courses+'s stored data</div>
+					<div class="section-desc">Manage Courses<strong>Plus</strong>'s stored data</div>
 				</li>
 				<li>
 					<div class="section-name">Privacy</div>
-					<div class="section-desc">Manage Courses+'s anonymous analytics</div>
+					<div class="section-desc">Manage Courses<strong>Plus</strong>'s anonymous analytics</div>
 				</li>
 				<li>
 					<div class="section-name">About</div>
-					<div class="section-desc">About the version of Courses+ you have installed.</div>
+					<div class="section-desc">About the version of Courses<strong>Plus</strong> you have installed.</div>
 				</li>
 			</ul>
 		</section>
 
 		<section id="main-options">
-			<p>You can use this page to set up, change, or disable some features of Courses+.</p>
+			<p>You can use this page to set up, change, or disable some features of Courses<strong>Plus</strong>.</p>
 			<p>If you're signed in to Chrome, your options are synced across computers.</p>
 			<p>Your changes are automatically saved.</p>
 			<h3>Make Courses yours</h3>
@@ -246,7 +246,7 @@
 			</div>
 
 			<h3>Services</h3>
-			<p>Services allow Courses+ to connect Courses with other websites you use every day.</p>
+			<p>Services allow Courses<strong>Plus</strong> to connect Courses with other websites you use every day.</p>
 			<div id="services">
 				<ul class="grid grid-pad">
 
@@ -256,7 +256,7 @@
 			<p>Have an idea for a great new service - or any other feature you'd like to see? Send us an email at <a href="mailto:emails@coursesplus.tk">emails@coursesplus.tk</a>! Do you want to develop services? See <a href="https://trello.com/b/1FJCJDxW">here</a>!</p>
 
 			<h3>Storage info</h3>
-			<p>Using sync storage - if you sign into Chrome on more than one computer, your Courses+ settings will sync between them!</p>
+			<p>Using sync storage - if you sign into Chrome on more than one computer, your Courses<strong>Plus</strong> settings will sync between them!</p>
 			<p id="storageUsage">Loading usage information...</p>
 			<button id="importData" class="btn btn-info">Import data</button>
 			<button id="exportData" class="btn btn-info">Export data</button>
@@ -264,7 +264,7 @@
 			<button id="clearStorage" class="btn btn-warning">Clear storage</button>
 
 			<h3>Privacy</h3>
-			<p>If you have the <strong>Navbar messages</strong> feature enabled, Courses+ will connect to a server so it can retrieve the newest message. When it does this, information about what browser version you have, what version of Courses+ you have, and a random, unique ID is transmitted to the server. No personally-identifying information is sent. To disable this tracking, disable the <strong>Navbar messages</strong> component.</p>
+			<p>If you have the <strong>Navbar messages</strong> feature enabled, Courses<strong>Plus</strong> will connect to a server so it can retrieve the newest message. When it does this, information about what browser version you have, what version of Courses<strong>Plus</strong> you have, and a random, unique ID is transmitted to the server. No personally-identifying information is sent. To disable this tracking, disable the <strong>Navbar messages</strong> component.</p>
 			<p>Your unique ID is: <strong id="coursesplus-uniqueid">Loading...</strong></p>
 		</section>
 	</body>
