--- a/etc/setup.html
+++ b/etc/setup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Courses+ Setup</title>
+		<title>CoursesPlus Setup</title>
 		<link rel="stylesheet" href="scss_gen/fonts.css" />
 		<link rel="icon" href="../images/icon128.png">
 		
@@ -56,7 +56,7 @@
 		</header>
 		<section>
 			<strong class="introhappything">Hey there!</strong>
-			<p>Thanks for installing Courses+. <stong>We think you're awesome.</stong></p>
+			<p>Thanks for installing Courses<strong>Plus</strong>. <stong>We think you're awesome.</stong></p>
 			<p>Before you start using it, you can use this setup to customise Courses however you want.</p>
 			<p>Don't care? Close this tab, it's OK!</p>
 			<p>You can always go back to the Settings page. There you can change the exact same settings that are here.</p>
