Added another <br> tag after the password field

--- a/etc/scheduleslogin.html
+++ b/etc/scheduleslogin.html
@@ -25,7 +25,7 @@
 		<p>Log in with your Dalton ID. We don't store your password; we only use it to log in to Schedules and retrieve your schedules.</p>
 		<div id="loginform">
 			<input type="text" id="daltonid" placeholder="Dalton ID" class="form-control" />
-			<input type="password" id="password" placeholder="Password" class="form-control" />
+			<input type="password" id="password" placeholder="Password" class="form-control" /><br>
 			<button id="login" class="btn btn-primary btn-lg">Log in</button>
 		</div>
 		<div id="loggingin" style="display:none;">
